--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </main>
 
     <footer>
-      <p>Erstellt von Dein Name | Bereitgestellt über GitHub Pages</p>
+      <p>Erstellt von Milan Meyer-Kaya | Bereitgestellt über GitHub Pages</p>
     </footer>
   </body>
 </html>
